.github: add comment about common tests HW dependencies
Workflow of common set of tests will not require any
specific HW and will be able to run using standard
Github Runners.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -1,5 +1,8 @@
 name: SPDK per-patch common tests
 
+# Workflow intended to run tests which can be executed using standard
+# Github runners, without any hardware-specific dependencies.
+
 on:
   workflow_call:
     inputs:
