--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -9,10 +9,14 @@ on:
       client_payload:
         required: false
         type: string
+        default: ''
 
 jobs:
   tests:
     runs-on: ubuntu-latest
+    env:
+      client_payload: ${{ inputs.client_payload != '' && fromJson(inputs.client_payload) || '' }}
+      spdk_path: './spdk'
     steps:
       # Required to use locally defined actions
       - name: Checkout the spdk-ci repo locally
@@ -20,16 +24,20 @@ jobs:
       - name: Prepare SPDK repo by checking out from Gerrit
         uses: ./.github/actions/checkout_gerrit
         with:
-          gerrit_ref: ${{ fromJson(inputs.client_payload).patchSet.ref }}
-          spdk_path: './spdk'
+          gerrit_ref: ${{ env.client_payload != '' && env.client_payload.patchSet.ref || '' }}
+          spdk_path: ${{ env.spdk_path }}
       - name: Log the current state
-        run: git -C ./spdk log --pretty=oneline -n 5
+        run: git -C ${{ env.spdk_path }} log --pretty=oneline -n 5
       # Placeholder for the actual tests. Replace in future PRs.
       - name: Hello world
         run: |
           echo "Hello!"
+    outputs:
+      client_payload: ${{ env.client_payload }}
 
   report:
+    # Only run if it was triggered by Gerrit event, with JSON for it
+    if: ${{ needs.tests.outputs.client_payload != '' }}
     runs-on: ubuntu-latest
     needs:
       - tests
@@ -48,7 +56,7 @@ jobs:
           # For demonstration purposes, as not to set any actual vote and only comment.
           VOTE=0
 
-          curl -L -X POST https://review.spdk.io/a/changes/${{ fromJson(inputs.client_payload).change.number }}/revisions/${{ fromJson(inputs.client_payload).patchSet.number }}/review \
+          curl -L -X POST https://review.spdk.io/a/changes/${{ needs.client_payload.change.number }}/revisions/${{ needs.client_payload.patchSet.number }}/review \
           --user "${{ secrets.GERRIT_BOT_USER }}:${{ secrets.GERRIT_BOT_HTTP_PASSWD }}" \
           --header "Content-Type: application/json" \
           --data "{'message': '$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID', 'labels': {'Verified': $VOTE}}" \
