trigger gerrit-webhook on spdk-ci PR
After this patch new PRs will trigger the same workflow
as any new patch set from Gerrit.

Obviously there is no JSON from Gerrit, but common
tests right now have defaults that will run against
upstream SPDK.

If needed, some defaults might have to be added here instead.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -1,8 +1,7 @@
 name: SPDK per-patch tests
 
-# TODO: Add pull_request target to enable self-testing, now that we've commited
-# to using pull requests for spdk-ci development process.
 on:
+  pull_request:
   workflow_dispatch:
   repository_dispatch:
     types:
