action: checkout SPDK from Gerrit
Added 'checkout_gerrit' action to pull specific change
from Gerrit or pull latest tip of branch from upstream.

In order to minimize traffic to Gerrit, a shallow clone
and submodule pull is done from GitHub. Followed by fetch
of specific change from Gerrit. Limiting it to only the diff
from master.

Please note that in order to use locally defined the actions,
spdk-ci has to be already checked out by the caller.

Explicit tests of specific branches (ex. releases) could
have been done via 'actions/checkout'. Yet the fallback
to check out upstream branches was done for cases where
trigger won't come from Gerrit. For example, testing changes
in workflows or manual retesting via GH gui. This way
workflows still get to call the exact same action.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -14,6 +14,16 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
+      # Required to use locally defined actions
+      - name: Checkout the spdk-ci repo locally
+        uses: actions/checkout@v4
+      - name: Prepare SPDK repo by checking out from Gerrit
+        uses: ./.github/actions/checkout_gerrit
+        with:
+          gerrit_ref: ${{ fromJson(inputs.client_payload).patchSet.ref }}
+          spdk_path: './spdk'
+      - name: Log the current state
+        run: git -C ./spdk log --pretty=oneline -n 5
       # Placeholder for the actual tests. Replace in future PRs.
       - name: Hello world
         run: |
