--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -3,6 +3,7 @@ name: SPDK per-patch tests
 # TODO: Add pull_request target to enable self-testing, now that we've commited
 # to using pull requests for spdk-ci development process.
 on:
+  workflow_dispatch:
   repository_dispatch:
     types:
       - per-patch-event
