Fix repository_dispatch flow
fromJSON() does not return a True/False value so it would
fail when left without comparison operator in conditional
statement with.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -23,7 +23,7 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     env:
-      client_payload: ${{ inputs.client_payload != '' && fromJson(inputs.client_payload) || '' }}
+      client_payload: ${{ inputs.client_payload != '' && fromJson(inputs.client_payload) != '' || '' }}
       gerrit_ref: ${{ inputs.gerrit_ref }}
       spdk_path: './spdk'
     steps:
