--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -44,13 +44,13 @@ jobs:
       cancel-in-progress: false
 
     steps:
-    - name: Checkout SPDK repository via GitHUB
+    - name: Checkout the spdk-ci repo locally
       uses: actions/checkout@v4.1.7
+    - name: Checkout SPDK repository via GitHUB
+      uses: ./.github/actions/checkout_gerrit
       with:
-        repository: spdk/spdk
-        fetch-depth: 0
-        path: spdk
-        ref: ${{ github.event.inputs.spdk_repos_ref }}
+        spdk_branch: ${{ github.event.inputs.spdk_repos_ref }}
+        spdk_path: spdk
 
     - name: Create a tarball, of the repository, to preserve file permissions
       run: |
