Unshallow SPDK in checkout action
Unfortunately has to be done because of "git describe"
used in SPDK autobuild.sh script. We can get rid of this
provided we remove "git describe" from SPDK repository.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/actions/checkout_gerrit/action.yml
+++ b/.github/actions/checkout_gerrit/action.yml
@@ -45,6 +45,11 @@ runs:
     run: |
       echo "- [SPDK Repository] GitHub: ${{ inputs.spdk_branch }}" >> $GITHUB_STEP_SUMMARY
     shell: bash
+  - name: Unshallow SPDK repository
+    working-directory: ${{ inputs.spdk_path }}
+    run: |
+      git fetch --unshallow --recurse-submodules=no
+    shell: bash
   - name: Add Information on the SPDK repository state
     working-directory: ${{ inputs.spdk_path }}
     run: |
