--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -2,43 +2,11 @@
 name: per_patch
 
 on:
-  workflow_dispatch:
-    inputs:
-      branch:
-        description: 'The branch with changes e.g. "changes/xx/yyyyyy/zz"'
-        type: string
-        required: true
+  workflow_call:
 
 jobs:
-  source-archive:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/refenv/cijoe-docker:v0.9.50
-
-    steps:
-      # Required to use locally defined actions
-    - name: Checkout the spdk-ci repo locally
-      uses: actions/checkout@v4.1.7
-    - name: Prepare SPDK repo by checking out from Gerrit
-      uses: ./.github/actions/checkout_gerrit
-      with:
-        gerrit_ref: ${{ github.event.inputs.branch }}
-        spdk_path: spdk
-
-    - name: Create a tarball of the repository
-      run: |
-        cd spdk
-        tar -czf /tmp/repository.tar.gz .
-
-    - name: Upload the repository as an artifact
-      uses: actions/upload-artifact@v4.4.0
-      with:
-        name: repository
-        path: /tmp/repository.tar.gz
-
   autorun:
     runs-on: ubuntu-latest
-    needs: source-archive
     timeout-minutes: 35
     env:
       REPOSITORY_TARBALL_PATH: ${{ github.workspace }}/repository.tar.gz
