--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -20,7 +20,7 @@ on:
         default: ''
 
 jobs:
-  tests:
+  checkout_spdk:
     runs-on: ubuntu-latest
     env:
       client_payload: ${{ inputs.client_payload != '' && fromJson(inputs.client_payload) != '' || '' }}
@@ -35,8 +35,19 @@ jobs:
       with:
         gerrit_ref: ${{ env.client_payload != '' && env.client_payload.patchSet.ref || env.gerrit_ref }}
         spdk_path: ${{ env.spdk_path }}
+    - name: Create repository tarball
+      run: tar -C ${{ env.spdk_path }} -czf repository.tar.gz .
+    - name: Upload the repository tarball as an artifact
+      uses: actions/upload-artifact@v4.4.0
+      with:
+        name: repository
+        path: repository.tar.gz
     outputs:
       client_payload: ${{ env.client_payload }}
+
+  tests:
+    needs: checkout_spdk
+    uses: ./.github/workflows/per_patch.yml
 
   report:
     # Only run if it was triggered by Gerrit event, with JSON for it
