--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -51,7 +51,7 @@ jobs:
 
   report:
     # Only run if it was triggered by Gerrit event, with JSON for it
-    if: ${{ needs.tests.outputs.is_called == 'true' }}
+    if: ${{ needs.checkout_spdk.outputs.is_called == 'true' }}
     runs-on: ubuntu-latest
     needs:
     - tests
