--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -10,6 +10,7 @@ jobs:
     timeout-minutes: 35
     env:
       REPOSITORY_TARBALL_PATH: ${{ github.workspace }}/repository.tar.gz
+      CI_REPOSITORY_TARBALL_PATH: ${{ github.workspace }}/ci_repository.tar.gz
     strategy:
       matrix:
         workflow: [autorun_unittest, autorun_nvme]
@@ -26,6 +27,10 @@ jobs:
       uses: actions/checkout@v4.1.7
       with:
         path: ci
+
+    - name: Tarball CI repository
+      run: |
+        tar -C ci -czf ci_repository.tar.gz .
 
     - name: Download the SPDK repository
       uses: actions/download-artifact@v4.1.8
@@ -48,7 +53,7 @@ jobs:
     - name: qemu-guest, provision
       run: |
         cd ci/cijoe
-        cijoe guest_initialize guest_start guest_check tgz_transfer tgz_unpack \
+        cijoe guest_initialize guest_start guest_check tgz_transfer ci_tgz_transfer tgz_unpack \
         --monitor \
         --config configs/qemuhost-with-guest-fedora-40.toml \
         --workflow workflows/autorun_in_qemu.yaml \
