--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -32,7 +32,9 @@ jobs:
       CI_CFGS_REPOSITORY_PATH: ${{ github.workspace }}/ci/cijoe/configs/autorun_configs
     strategy:
       matrix:
-        workflow: [autorun_unittest, autorun_nvme]
+        workflow:
+        - autorun_unittest
+        - autorun_nvme
     container:
       image: ghcr.io/refenv/cijoe-docker:v0.9.50
       options: --device=/dev/kvm
