--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -35,6 +35,7 @@ jobs:
         workflow:
         - autorun_unittest
         - autorun_nvme
+        - autorun_nvmf
     container:
       image: ghcr.io/refenv/cijoe-docker:v0.9.50
       options: --device=/dev/kvm
