--- a/cijoe/configs/qemuhost-with-guest-fedora-40.toml
+++ b/cijoe/configs/qemuhost-with-guest-fedora-40.toml
@@ -51,4 +51,8 @@ cloud.path = "{{ local.env.HOME }}/system_imaging/cloud/Fedora-Cloud-Base-Generi
 cloud.metadata_path = "{{ resources.auxiliary['system_imaging.cloudinit-linux-common-metadata'] }}"
 cloud.userdata_path = "{{ resources.auxiliary['system_imaging.cloudinit-linux-common-userdata'] }}"
 
+#disk.path = "{{ local.env.HOME }}/system_imaging/disk/fedora_40_x86_64.qcow2"
 disk.path = "/__w/spdk-ci/spdk-ci/fedora_40_x86_64.qcow2"
+
+docker.name = "spdk-ci"
+docker.tag = "poc"
