cijoe: save autorun output directly to /opt/output
Using Github download/upload artifact actions results
in "autorun_*_artifacts" directory created when
extracting from "autorun_*_artifacts.zip".

Removing one level from path (e.g. "/opt/output/nvme")
saves later trouble with handling nested directories.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/cijoe/workflows/autorun_in_qemu.yaml
+++ b/cijoe/workflows/autorun_in_qemu.yaml
@@ -46,13 +46,13 @@ steps:
 
 - name: autorun_unittest
   run: |
-    mkdir -p /opt/output/unittest
-    output_dir=/opt/output/unittest /opt/spdk/autorun.sh /opt/configs/unittest.conf
+    mkdir -p /opt/output
+    output_dir=/opt/output /opt/spdk/autorun.sh /opt/configs/unittest.conf
 
 - name: autorun_nvme
   run: |
-    mkdir -p /opt/output/nvme
-    output_dir=/opt/output/nvme /opt/spdk/autorun.sh /opt/configs/nvme.conf
+    mkdir -p /opt/output
+    output_dir=/opt/output /opt/spdk/autorun.sh /opt/configs/nvme.conf
 
 - name: output_listing
   run: |
