selftest: print precommit diff on linter's error
Continue "pipx" step on error and print diff
so that it's clear what was the issue.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -22,3 +22,9 @@ jobs:
     - name: Format
       run: |
         pipx run -q --python python3 pre-commit run --all
+
+    - name: Print formatting changes
+      if: ${{ failure() }}
+      run: |
+        git --no-pager diff
+        exit 1
