selftest: remove pipx quiet flag
Pipx versions < 1.4.0 do not have this option which makes
the test fail if it's used (for example when using "gh act"
locally).

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Format
       run: |
-        pipx run -q --python python3 pre-commit run --all
+        pipx run --python python3 pre-commit run --all
 
     - name: Print formatting changes
       if: ${{ failure() }}
