common: add gcc release build job
s/main/gcc
s/docker/container

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -36,6 +36,7 @@ jobs:
         - autorun_nvme
         - unittest-gcc-container-autotest
         - check-format-container-autotest
+        - release-build-gcc-container-autotest
     container:
       image: ghcr.io/refenv/cijoe-docker:v0.9.50
       options: --device=/dev/kvm
