common: add doc building job
Note that empty.conf was added to avoid creating empty config
files for jobs that require no such file. We might want to revist
this requirement on some of the scripts in SPDK.

s/docker/container

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/cijoe/workflows/autorun_in_qemu.yaml
+++ b/cijoe/workflows/autorun_in_qemu.yaml
@@ -64,6 +64,10 @@ steps:
   run: |
     rootdir=/opt/spdk && cd $rootdir && source ./test/common/autobuild_common.sh /opt/configs/release-build-gcc-container-autotest.conf && build_release
 
+- name: doc-container-autotest
+  run: |
+    rootdir=/opt/spdk && cd $rootdir && source ./test/common/autobuild_common.sh /opt/configs/empty.conf && build_doc
+
 - name: output_listing
   run: |
     ls /opt
