--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -37,6 +37,7 @@ jobs:
         - unittest-gcc-container-autotest
         - check-format-container-autotest
         - release-build-gcc-container-autotest
+        - doc-container-autotest
     container:
       image: ghcr.io/refenv/cijoe-docker:v0.9.50
       options: --device=/dev/kvm
