--- a/cijoe/workflows/autorun_in_qemu.yaml
+++ b/cijoe/workflows/autorun_in_qemu.yaml
@@ -68,6 +68,10 @@ steps:
   run: |
     rootdir=/opt/spdk && cd $rootdir && source ./test/common/autobuild_common.sh /opt/configs/empty.conf && build_doc
 
+- name: build-files-container-autotest
+  run: |
+    rootdir=/opt/spdk && cd $rootdir && source ./test/common/autobuild_common.sh /opt/configs/empty.conf && build_files && dpdk_pci_api
+
 - name: output_listing
   run: |
     ls /opt
