common: add a step to create output_dir
This will avoid repeating this operation multiple times.

Technically auto[run|build|test].sh create a dir for output
in 'spdk/../', but making it explicit makes it more clear.

Additionally the output_dir is set by default one directory
up from spdk. Use that to shorten the already unwieldy one-liner.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -68,7 +68,7 @@ jobs:
     - name: qemu-guest, provision
       run: |
         cd ci/cijoe
-        cijoe guest_initialize guest_start guest_check tgz_transfer ci_configs_transfer tgz_unpack \
+        cijoe guest_initialize guest_start guest_check tgz_transfer ci_configs_transfer tgz_unpack output_create \
         --monitor \
         --config configs/qemuhost-with-guest-fedora-40.toml \
         --workflow workflows/autorun_in_qemu.yaml \
