--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -29,6 +29,7 @@ jobs:
     timeout-minutes: 35
     env:
       REPOSITORY_TARBALL_PATH: ${{ github.workspace }}/repository.tar.gz
+      ABI_TARBALL_PATH: ${{ github.workspace }}/abi.tar.gz
       CI_CFGS_REPOSITORY_PATH: ${{ github.workspace }}/ci/cijoe/configs/autorun_configs
     strategy:
       matrix:
@@ -40,6 +41,7 @@ jobs:
         - doc-container-autotest
         - build-files-container-autotest
         - scan-build-container-autotest
+        - check-so-deps-container-autotest
     container:
       image: ghcr.io/refenv/cijoe-docker:v0.9.50
       options: --device=/dev/kvm
@@ -59,9 +61,15 @@ jobs:
       with:
         name: repository
 
+    - name: Download the SPDK ABI repository
+      uses: actions/download-artifact@v4.1.8
+      with:
+        name: abi
+
     - name: Extract the SPDK repository
       run: |
         tar xzf repository.tar.gz --strip 1
+        tar xzf abi.tar.gz --strip 1
 
     - name: Download VM Qcow2 image artifact
       uses: actions/download-artifact@v4.1.8
@@ -73,7 +81,7 @@ jobs:
     - name: qemu-guest, provision
       run: |
         cd ci/cijoe
-        cijoe guest_initialize guest_start guest_check tgz_transfer ci_configs_transfer tgz_unpack output_create \
+        cijoe guest_initialize guest_start guest_check tgz_transfer abi_transfer ci_configs_transfer tgz_unpack output_create \
         --monitor \
         --config configs/qemuhost-with-guest-fedora-40.toml \
         --workflow workflows/autorun_in_qemu.yaml \
