common: add safe.directory for submodules
Some of the tests perform git operations on the submodules.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/cijoe/workflows/autorun_in_qemu.yaml
+++ b/cijoe/workflows/autorun_in_qemu.yaml
@@ -42,7 +42,7 @@ steps:
   run: |
     mkdir -p /opt/spdk
     tar xzf /tmp/repository.tar.gz -C /opt/spdk
-    git config --global --add safe.directory /opt/spdk
+    git config --global --add safe.directory '*'
 
 - name: output_create
   run: |
