common: adjust pattern for collecting output from jobs
Probably '*-autotest_artifacts' would be better in the
future, but still need to change the nvme job to match.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -82,7 +82,7 @@ jobs:
     - name: Download artifact tarballs
       uses: actions/download-artifact@v4.1.8
       with:
-        pattern: 'autorun_*_artifacts'
+        pattern: '*_artifacts'
 
     - name: Show artifacts
       run: |
