selftest: add codespell to pre-commit tests
Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,3 +41,9 @@ repos:
   hooks:
   - id: mypy
     name: Python-lint-mypy
+
+- repo: https://github.com/codespell-project/codespell
+  rev: v2.4.1
+  hooks:
+  - id: codespell
+    name: codespell
