common: add nvmf-tcp jobs from Jenkins CI
Added job that matches the NVMe-oF TCP with posix/uring.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -37,6 +37,8 @@ jobs:
         - nvme-vm-autotest
         - raid-vm-autotest
         - bdev-vm-autotest
+        - nvmf-tcp-vm-autotest
+        - nvmf-tcp-uring-vm-autotest
         - unittest-gcc-container-autotest
         - check-format-container-autotest
         - release-build-gcc-container-autotest
