common: add bdev jobs from Jenkins CI
This bunch ups tests from crypto-phy-autotest, lvol-vm-autotest
and other misc tests from other jobs.

Enabled what is possible with least resistance right now.
Some are definietly not possible in VM, but we might need
to go with more finer comb to split up existing tests.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -36,6 +36,7 @@ jobs:
         workflow:
         - nvme-vm-autotest
         - raid-vm-autotest
+        - bdev-vm-autotest
         - unittest-gcc-container-autotest
         - check-format-container-autotest
         - release-build-gcc-container-autotest
