build_qcow: rebuild the VM image on changes to workflow
Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -36,6 +36,7 @@ on:
   push:
     branches: ["main"]
     paths:
+    - '.github/workflows/build_qcow2.yml'
     - 'cijoe/configs/qemuhost-with-guest-fedora-40.toml'
     - 'cijoe/workflows/build_qcow2_using_qemu.yaml'
 
