--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -35,7 +35,7 @@ jobs:
       matrix:
         workflow:
         - autorun_nvme
-        - raid-vg-autotest
+        - raid-vm-autotest
         - unittest-gcc-container-autotest
         - check-format-container-autotest
         - release-build-gcc-container-autotest
