build_qemu: move INSTALL_* vars to test-conf
Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/cijoe/workflows/build_qcow2_using_qemu.yaml
+++ b/cijoe/workflows/build_qcow2_using_qemu.yaml
@@ -76,7 +76,7 @@ steps:
 - name: pkgdep_and_autotest_setup
   run: |
     /tmp/spdk/scripts/pkgdep.sh -a
-    INSTALL_FLAMEGRAPH=true INSTALL_FIO=true INSTALL_NVMECLI=true /tmp/spdk/test/common/config/autotest_setup.sh --install-deps --upgrade --test-conf="lcov"
+    /tmp/spdk/test/common/config/autotest_setup.sh --install-deps --upgrade --test-conf="lcov,flamegraph,fio,nvmecli"
 
 - name: guest_shutdown
   run: |
