build_qemu: specify directory for building deps
By default the repositories will be pulled to $HOME
and later remain there - polluting the image.

This patch explicitly sets this directory and removes
it after dependencies are installed - clean it up.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/cijoe/workflows/build_qcow2_using_qemu.yaml
+++ b/cijoe/workflows/build_qcow2_using_qemu.yaml
@@ -76,7 +76,9 @@ steps:
 - name: pkgdep_and_autotest_setup
   run: |
     /tmp/spdk/scripts/pkgdep.sh -a
-    /tmp/spdk/test/common/config/autotest_setup.sh --install-deps --upgrade --test-conf="lcov,flamegraph,fio,nvmecli"
+    mkdir /tmp/git_repos
+    /tmp/spdk/test/common/config/autotest_setup.sh --install-deps --upgrade --dir-git="/tmp/git_repos" --test-conf="lcov,flamegraph,fio,nvmecli"
+    rm -r /tmp/git_repos
 
 - name: guest_shutdown
   run: |
