Recreate the raid-vg-autotest job
Signed-off-by: Mateusz Kozlowski <mateusz.kozlowski@solidigm.com>

--- a/.github/workflows/per_patch.yml
+++ b/.github/workflows/per_patch.yml
@@ -35,6 +35,7 @@ jobs:
       matrix:
         workflow:
         - autorun_nvme
+        - raid-vg-autotest
         - unittest-gcc-container-autotest
         - check-format-container-autotest
         - release-build-gcc-container-autotest
